--- a/index.html
+++ b/index.html
@@ -274,11 +274,9 @@
                 class="m-3 p-3"
               />
               <div>
-                <h5>Find the Perfect Fit</h5>
-                <p>
-                  Everybody is different, which is why we offer styles for every
-                  body
-                </p>
+                <h5>Free Exchanges</h5>
+                <p>One of the many reasons you can shop
+                  with peace of mind.</p>
               </div>
             </div>
             <div class="d-flex align-items-center shadow">
@@ -289,10 +287,10 @@
                 class="m-3 p-3"
               />
               <div>
-                <h5>Find the Perfect Fit</h5>
-                <p>
-                  Everybody is different, which is why we offer styles for every
-                  body
+                <h5>Contact Our Seller</h5>
+                <p>They are here to help you. That's quite 
+
+                  literally what we pay them for.
                 </p>
               </div>
             </div>
