--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
 
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="images/Logo, Icon/Logo.png" alt="" style="width: auto; height: 35px;"></a>
+          <a class="navbar-brand" href="#"><img src="images/Logo, Icon/Logo.png" alt="" class="ms-5" style="width: auto; height: 35px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse " id="navbarNav" style="float: right;">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav" style="float: right;">
             <ul class="navbar-nav ">
-              <li class="nav-item">
+              <li class="nav-item me-5">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item ">
+              <li class="nav-item me-5">
                 <a class="nav-link" href="#">About Us</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item me-5">
                 <a class="nav-link" href="#">Products</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item me-5">
                 <a class="nav-link " href="#" >contract Us</a>
               </li>
             </ul>
@@ -97,7 +97,7 @@
                 <div class="container overflow-hidden">
                   <div class="row gx-5">
                     <div class="col">
-                     <div  class="ms-5"><h1>$400</h1></div>
+                     <div  class="ms-5 color-heighlit"><h1>$400</h1></div>
                     </div>
                     <div class="col mb-3">
                       <div ><button class="btn btn-primary" id="button"><i class="fas fa-shopping-cart"></i> Buy Now</button></div>
@@ -122,7 +122,7 @@
                 <div class="container overflow-hidden">
                   <div class="row gx-5">
                     <div class="col">
-                      <div  class="ms-5"><h1>$400</h1></div>
+                      <div  class="ms-5 color-heighlit"><h1>$400</h1></div>
                     </div>
                     <div class="col mb-3">
                       <div ><button class="btn btn-primary" id="button"><i class="fas fa-shopping-cart"></i> Buy Now</button></div>
@@ -147,7 +147,7 @@
                 <div class="container overflow-hidden">
                   <div class="row gx-5">
                     <div class="col">
-                      <div  class="ms-5"><h1>$400</h1></div>
+                      <div  class="ms-5 color-heighlit"><h1>$400</h1></div>
                     </div>
                     <div class="col mb-3">
                       <div ><button class="btn btn-primary" id="button"><i class="fas fa-shopping-cart"></i> Buy Now</button></div>
@@ -179,7 +179,7 @@
                 <div class="container overflow-hidden">
                   <div class="row gx-5">
                     <div class="col">
-                      <div  class="ms-5"><h1>$400</h1></div>
+                      <div  class="ms-5 color-heighlit"><h1>$400</h1></div>
                     </div>
                     <div class="col mb-3">
                       <div ><button class="btn btn-primary" id="button"><i class="fas fa-shopping-cart"></i> Buy Now</button></div>
@@ -204,7 +204,7 @@
                 <div class="container overflow-hidden">
                   <div class="row gx-5">
                     <div class="col">
-                      <div  class="ms-5"><h1>$400</h1></div>
+                      <div  class="ms-5 color-heighlit"><h1>$400</h1></div>
                     </div>
                     <div class="col mb-3">
                       <div ><button class="btn btn-primary" id="button"><i class="fas fa-shopping-cart"></i> Buy Now</button></div>
@@ -229,7 +229,7 @@
                 <div class="container overflow-hidden">
                   <div class="row gx-5">
                     <div class="col">
-                      <div  class="ms-5"><h1>$400</h1></div>
+                      <div  class="ms-5 color-heighlit"><h1>$400</h1></div>
                     </div>
                     <div class="col mb-3">
                       <div ><button class="btn btn-primary" id="button"><i class="fas fa-shopping-cart"></i> Buy Now</button></div>
@@ -312,7 +312,6 @@
       <h1><span class="color-heighlit">  GET 40%</span> DISCOUNT</h1>
       <div class="card-body">
         <form >
-      
           <input type="text" placeholder="Name" name="name" required > <br><br>
           <input type="text" placeholder="Email address" name="mail" required> <br><br>
           <button class="btn btn-primary">Subscribe Now</button>
